--- a/pages/homepage/homepage.wxss
+++ b/pages/homepage/homepage.wxss
@@ -22,6 +22,8 @@ page {
   display: flex;
   flex-direction: row;
   background-color: rgb(79, 175, 254);
+  border-top-left-radius:20rpx;
+  border-top-right-radius:20rpx;
   /* position: sticky;
   top: 0;
   z-index: 2;  *//* position: fixed;
@@ -88,21 +90,35 @@ page {
   display: flex;
   justify-content: flex-end;
 }
-
 .phone {
   display: flex;
   color: white;
   justify-content: center;
   align-items: center;
   background-color: #4faffe;
-  padding: 8px;
-  width: 160px;
-  height: 27px;
+  padding: 16rpx;
+  width: 320rpx;
+  height: 54rpx;
   border-radius: 50rpx;
   letter-spacing: 1px;
   font-size: 32rpx;
-  margin-bottom: 15px;
-  margin-right: 15px;
+  margin-bottom: 30rpx;
+  margin-right: 30rpx;
+}
+.sixin {
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  background-color: #4faffe;
+  padding: 8px;
+  width: 240rpx;
+  height: 54rpx;
+  border-radius: 50rpx;
+  letter-spacing: 1px;
+  font-size: 32rpx;
+  margin-bottom: 30rpx;
+  margin-right: 30rpx;
 }
 
 .searchCon {
@@ -347,6 +363,7 @@ page {
 .money-wrapper {
   position: absolute;
   left: 174px;
+  top:0rpx;
 }
 
 .checkmore {
