--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -6,24 +6,32 @@
           <image class='shopImg' src='/images/icons/dianpu.png'></image>
           <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>店铺名</text>
         </view>
-        <view style='width:500rpx;margin-top:15rpx;color: rgb(22, 22, 22);font-size:37rpx;'>
+        <view style='width:340rpx;margin-top:15rpx;color: rgb(22, 22, 22);font-size:37rpx;'>
           <text style='margin-left:10rpx;'>{{teaList.name!=null?teaList.name:''}}</text>
+        </view>
+        <view style='margin-top:15rpx;color: rgb(22, 22, 22);font-size:30rpx;width:170rpx;display:flex;justify-content:flex-end;align-items:flex-end'>
+          <text style='margin-left:5rpx;color:#e0620d'>{{teaList.visitCount}}</text>
+          <text style='margin-left:10rpx;font-size:25rpx;color:#a09f9f'>人浏览</text>
         </view>
 
       </view>
       <view class='phone'>
-        <view style='width:20%;margin-bottom:15rpx'>
+        <view style='width:160rpx;margin-bottom:15rpx'>
           <image class='shopImg' src='/images/icons/dianhua.png'></image>
           <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>电话</text>
         </view>
-        <view style='width:80%;margin-bottom:15rpx;color: rgb(22, 22, 22);font-size:37rpx;'>
+        <view style='width:340rpx;margin-bottom:15rpx;color: rgb(22, 22, 22);font-size:37rpx;'>
           <text style='margin-left:10rpx;' catchtap='onPhoneTap' data-phone="{{teaList.phone}}">{{teaList.phone!=null?teaList.phone:''}}</text>
+        </view>
+        <view style='margin-bottom:15rpx;color: rgb(22, 22, 22);font-size:30rpx;width:170rpx;display:flex;justify-content:flex-end;align-items:flex-end'>
+          <text style='margin-left:5rpx;color:#e0620d'>{{teaList.likeCount}}</text>
+          <text style='margin-left:10rpx;font-size:25rpx;color:#a09f9f'>人关注</text>
         </view>
       </view>
     </view>
 
     <view style=''>
-      <scroll-view scroll-y="true" style='margin-top: 7px;max-height:600rpx;'>
+      <scroll-view scroll-y="true" style='margin-top: 7px;max-height:460rpx;'>
         <view class='body' wx:for="{{teaList.objects}}">
           <view class='products'>
             <view style='width:20%;display:flex;justify-content:center'>
@@ -46,7 +54,7 @@
   </view>
 
   <view style="{{edit?'':'display:none'}}">
-    <view class='msg'>
+    <view class='msg02'>
       <view class='shopName'>
         <view style='width:20%;margin-top:15rpx'>
           <text style='color: rgb(84, 84, 84);margin-left:10rpx;'>店铺名</text>
@@ -76,8 +84,9 @@
           <input placeholder-class="{{flag?'':'fontclass'}}" style='margin-left:10px;' placeholder="请输入名称" bindinput="teaInput" value="{{item.name}}" data-teaindex="{{index}}" />
         </view>
         <view style='display:flex;align-items: center;justify-content: center;'>
-          <image style='height:22px;width:17px;margin-left:7px;' src='/images/icons/delete.png' catchtap='onDeleteTap' data-teaindex="{{index}}"></image>
-          <text style='color:#4faffe;font-size:17px;margin-left:8px;' bindtap="onMoreTap" data-teaindex="{{index}}">更多</text>
+          <image style='height:44rpx;width:34rpx;margin-left:7px;' src='/images/icons/arrowdown.png' catchtap='onArrowdownTap' data-teaindex="{{index}}"></image>
+          <image style='height:44rpx;width:34rpx;margin-left:7px;' src='/images/icons/delete.png' catchtap='onDeleteTap' data-teaindex="{{index}}"></image>
+          <text style='color:#4faffe;font-size:34rpx;margin-left:8px;' bindtap="onMoreTap" data-teaindex="{{index}}">更多</text>
         </view>
       </view>
     </scroll-view>
@@ -91,19 +100,35 @@
   <view class='func' style="{{edit?'display:none':''}}">
     <view class='delete' catchtap='onClearTap' data-requireId="{{teaList.id}}">清空并重新发布</view>
     <view class='edit' catchtap='onEditTap'>编辑</view>
-    <view class='preview' catchtap='onPreviewTap'>预览</view>
+    <view class='preview' catchtap='onPreviewTap' style='display:none'>预览</view>
   </view>
 
   <view class='confirmcel' style="{{edit?'':'display:none'}}">
     <view class='cancel' catchtap='onCancelTap'>取消</view>
     <view class='confirm' catchtap='onConfirmTap' data-requireId="{{teaList.id}}">发布</view>
   </view>
-  <view class='tips' style="{{edit?'display:none':''}}">
+  <!-- 提示 -->
+  <view class='tips' style="{{edit?'display:none':'display:none'}}">
     <view class="tooltip">
       <image src='/images/icons/tips.png' style='height:45rpx;width:45rpx;'></image>
       <text class='tooltiptext'>生成分享图片，长按图片可分享给朋友</text>
     </view>
   </view>
+  <!-- 提示 -->
+  <view style="{{edit?'display:none':''}}">
+    <view class='iconstxt'>选择喜欢的背景图标再生成图片</view>
+    <scroll-view  scroll-x="true" class='scrollview'>
+      <view style='display: inline-block;padding:0 2px;' wx:for="{{iconList}}" wx:for-item="work" wx:key="{{index}}">
+        <view style='padding:10rpx;position:relative;' catchtap='onIconsTap' data-id="{{index}}">
+          <view class="{{chooseIcon == index ?'':'tips'}}"></view>
+          <image class='work-img' src='{{work.url}}'></image>
+        </view>
+      </view>
+    </scroll-view>
+  </view>
+
+
+
   <view class='bottom' style="{{edit?'display:none':''}}">
     <button open-type="share" class='friends'>
       <image style='width:50rpx;height:50rpx;padding-top:10rpx' src='/images/icons/wechat2.png'></image>
