--- a/pages/publish/publish.wxss
+++ b/pages/publish/publish.wxss
@@ -18,6 +18,13 @@ page {
   border-bottom: 1rpx solid rgb(220, 220, 220);
 }
 
+.msg02 {
+  /* margin-top: 7px; *//* width: 100%; */
+  height: 105px;
+  background-color: white;
+  border-bottom: 1rpx solid rgb(220, 220, 220);
+}
+
 .shopImg {
   height: 35rpx;
   width: 35rpx;
@@ -89,12 +96,12 @@ page {
   background-color: #ff7146;
   height: 88rpx;
   color: white;
-  width: 160rpx;
+  width: 300rpx;
   font-size: 35rpx;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 30rpx;
+  margin-left: 85rpx;
   border-radius: 10rpx;
 }
 
@@ -350,14 +357,14 @@ page {
   border: 1rpx solid rgb(220, 220, 220);
   position: relative;
   margin: 12rpx;
-  padding: 16rpx 10rpx;
+  padding: 16rpx 1rpx;
   border-radius: 5px;
 }
 
 .editinput {
-  width: 50%;
+  width: 48%;
   color: rgb(22, 22, 22);
-  font-size: 37rpx;
+  font-size: 30rpx;
   border: 1rpx solid rgb(220, 220, 220);
   padding-top: 10rpx;
   padding-bottom: 10rpx;
@@ -407,6 +414,7 @@ page {
   top: 6rpx;
   right: 15rpx;
 }
+
 .number {
   background-color: red;
   color: white;
@@ -439,7 +447,7 @@ page {
   visibility: hidden;
   width: 230px;
   background-color: white;
-  color: #000000;
+  color: #000;
   text-align: center;
   padding: 5px 0;
   border-radius: 3px;
@@ -460,7 +468,49 @@ page {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
 .message {
   display: flex;
   position: relative;
+}
+
+.scrollview {
+  white-space: nowrap;
+  display: flex;
+  width: 100%; 
+  height: 200rpx; 
+  padding: 20rpx;
+  position: fixed;
+  bottom: 169rpx;
+  z-index: 3;
+   /* height:120rpx;  */
+}
+
+.work-img {
+  width: 120rpx;
+  height: 120rpx;
+  /* border-radius: 50%; */
+}
+
+.tips {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  color: white;
+  right: 0;
+  bottom: 0;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  border-radius: 10rpx;
+}
+
+.iconstxt {
+  font-size: 18rpx;
+  color: #f4990b;
+  padding: 5rpx 30rpx;
+  position: fixed;
+  bottom: 400rpx;
 }
